--- a/Loop/nb.lproj/Main.strings
+++ b/Loop/nb.lproj/Main.strings
@@ -107,7 +107,7 @@
 "pi6-Dh-72V.title" = "Insulinmodell";
 
 /* Class = "UILabel"; text = "An insulin activity model is used to estimate effects of insulin on glucose levels. An accurate model can help prevent insulin stacking and safely recommend corrective treatments."; ObjectID = "PJv-p9-cFe"; */
-"PJv-p9-cFe.text" = "An insulin activity model is used to estimate effects of insulin on glucose levels. An accurate model can help prevent insulin stacking and safely recommend corrective treatments.";
+"PJv-p9-cFe.text" = "En insulinaktivitetsmodell brukes til å estimere effekten av insulin på blodsukkeret. En nøyaktig modell kan bidra til å forhindre insulinstacking og kunne anbefale korrigerende tiltak.";
 
 /* Class = "UILabel"; text = "eventually 92 mg/dL"; ObjectID = "Rse-x8-amW"; */
 "Rse-x8-amW.text" = "omsider 92 mg/dL";
@@ -137,7 +137,7 @@
 "yn7-2M-jZz.text" = "0";
 
 /* Class = "UILabel"; text = "Recommended"; ObjectID = "ywT-OR-NnU"; */
-"ywT-OR-NnU.text" = "Abefalt";
+"ywT-OR-NnU.text" = "Anbefalt";
 
 /* Class = "UILabel"; text = "Title"; ObjectID = "zbc-87-wxZ"; */
 "zbc-87-wxZ.text" = "Tittel";
