--- a/LoopUI/nb.lproj/Localizable.strings
+++ b/LoopUI/nb.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 /* Format string describing the time interval since the last completion date. (1: The localized date components */
-"%@ ago" = "%@ ago";
+"%@ ago" = "%@ siden";
 
 /* The format string describing the basal rate. */
 "%@ U" = "%@ E";
@@ -8,13 +8,13 @@
 "%@U" = "%@U";
 
 /* Accessbility format value describing glucose: (1: glucose number)(2: glucose time) */
-"%1$@ at %2$@" = "%1$@ at %2$@";
+"%1$@ at %2$@" = "%1$@ kl. %2$@";
 
 /* Accessibility format string describing the basal rate. (1: localized basal rate value)(2: last updated time) */
-"%1$@ units per hour at %2$@" = "%1$@ units per hour at %2$@";
+"%1$@ units per hour at %2$@" = "%1$@ enheter per time ved kl. %2$@";
 
 /* Accessibility format string for (1: localized volume)(2: time) */
-"%1$@ units remaining at %2$@" = "%1$@ units remaining at %2$@";
+"%1$@ units remaining at %2$@" = "%1$@ enheter igjen ved kl. %2$@";
 
 /* Accessibility hint describing completion HUD for a closed loop */
 "Closed loop" = "Lukket Loop";
@@ -26,7 +26,7 @@
 "g" = "g";
 
 /* Accessbility format label describing the time interval since the last completion date. (1: The localized date components) */
-"Loop ran %@ ago" = "Loop kjørte %@ ago";
+"Loop ran %@ ago" = "Loop kjørte %@ siden";
 
 /* The short unit display string for milligrams of glucose per decilter */
 "mg/dL" = "mg/dL";
