--- a/WatchApp/nl.lproj/Interface.strings
+++ b/WatchApp/nl.lproj/Interface.strings
@@ -2,13 +2,13 @@
 "0fo-Z3-hTi.title" = "🌮";
 
 /* Class = "WKInterfaceButton"; title = "Add Carbs"; ObjectID = "b6f-3I-jki"; */
-"b6f-3I-jki.title" = "Add Carbs";
+"b6f-3I-jki.title" = "Koolhydraten toevoegen";
 
 /* Class = "WKInterfaceLabel"; text = "15"; ObjectID = "CWt-7U-cnK"; */
 "CWt-7U-cnK.text" = "15";
 
 /* Class = "WKInterfaceButton"; accessibilityLabel = "Subtract"; ObjectID = "Dh9-HV-fXy"; */
-"Dh9-HV-fXy.accessibilityLabel" = "Subtract";
+"Dh9-HV-fXy.accessibilityLabel" = "Aftrekken";
 
 /* Class = "WKInterfaceButton"; title = "−"; ObjectID = "Dh9-HV-fXy"; */
 "Dh9-HV-fXy.title" = "−";
@@ -17,31 +17,31 @@
 "dPF-QZ-sh6.title" = "🍕";
 
 /* Class = "WKInterfaceButton"; accessibilityLabel = "Add"; ObjectID = "DZc-Gn-RLu"; */
-"DZc-Gn-RLu.accessibilityLabel" = "Add";
+"DZc-Gn-RLu.accessibilityLabel" = "Toevoegen";
 
 /* Class = "WKInterfaceButton"; title = "+"; ObjectID = "DZc-Gn-RLu"; */
 "DZc-Gn-RLu.title" = "+";
 
 /* Class = "WKInterfaceButton"; accessibilityLabel = "Add"; ObjectID = "eu3-pj-GH3"; */
-"eu3-pj-GH3.accessibilityLabel" = "Add";
+"eu3-pj-GH3.accessibilityLabel" = "Toevoegen";
 
 /* Class = "WKInterfaceButton"; title = "+"; ObjectID = "eu3-pj-GH3"; */
 "eu3-pj-GH3.title" = "+";
 
 /* Class = "WKInterfaceLabel"; text = "Pre-Meal"; ObjectID = "f5G-bS-9pd"; */
-"f5G-bS-9pd.text" = "Pre-Meal";
+"f5G-bS-9pd.text" = "Pre-Maaltijd";
 
 /* Class = "WKInterfaceButton"; title = "🍭"; ObjectID = "gAn-qe-OvX"; */
 "gAn-qe-OvX.title" = "🍭";
 
 /* Class = "WKInterfaceButton"; accessibilityLabel = "Subtract"; ObjectID = "hjF-xr-cwO"; */
-"hjF-xr-cwO.accessibilityLabel" = "Subtract";
+"hjF-xr-cwO.accessibilityLabel" = "Aftrekken";
 
 /* Class = "WKInterfaceButton"; title = "−"; ObjectID = "hjF-xr-cwO"; */
 "hjF-xr-cwO.title" = "−";
 
 /* Class = "WKInterfaceLabel"; text = "Carbs"; ObjectID = "hln-CI-MRP"; */
-"hln-CI-MRP.text" = "Carbs";
+"hln-CI-MRP.text" = "Koolhydraten";
 
 /* Class = "WKInterfaceLabel"; text = "Bolus Failed"; ObjectID = "jj3-Gq-HBy"; */
 "jj3-Gq-HBy.text" = "Bolus Mislukt";
